overlays/production/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-prometheus-server
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: prometheus-server
